<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@color/background"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txt_appName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/psm_update_quizz_app"
        android:textColor="#C4E630"
        android:textSize="25sp"
        android:textStyle="bold"
        />

    <ImageView
        android:id="@+id/logoImg"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:contentDescription="@string/logo"
        app:srcCompat="@drawable/logoreal" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="5dp"
        app:cardBackgroundColor="@android:color/transparent"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp"
            android:gravity="center"
            >

            <TextView
                android:id="@+id/txtHome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:gravity="center"
                android:textStyle="bold"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/namedesc"
                android:textColor="@color/texte_description"
                android:textSize="15sp"
                android:gravity="center"
                />
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:boxBackgroundColor="@color/white"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                >
                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/name_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:hint="@string/nom"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnStart"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/commencer"
                android:textSize="14sp"
                android:textColor="@color/background"
                android:background="@drawable/button_drawable"
                />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>