<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1E1E1E"
    tools:context=".SplashScreen">

    <TextView
        android:id="@+id/tv_brand"
        android:layout_width="344dp"
        android:layout_height="61dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/carter_one"
        android:text="@string/app_name"
        android:textColor="#C4E630"
        android:textSize="50sp"
        android:textStyle="bold"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_splash" />

    <TextView
        android:id="@+id/tv_slogan"
        android:layout_width="215dp"
        android:layout_height="33dp"
        android:layout_marginStart="120dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/carter_one"
        android:text="@string/passion_super_motiv"
        android:textAlignment="textEnd"
        android:textColor="#647518"
        android:textSize="15sp"
        android:textStyle="italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_brand" />

    <ImageView
        android:id="@+id/img_splash"
        android:layout_width="235dp"
        android:layout_height="202dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="216dp"
        android:layout_marginEnd="10dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/logo_splash"
        android:src="@drawable/update"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>