<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/background"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".Questions">

    <ImageView
        android:id="@+id/logoImg"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:contentDescription="@string/logo"
        app:srcCompat="@drawable/logoreal" />

    <TextView
        android:id="@+id/txtQuest"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_margin="10dp"
        android:gravity="center"
        android:textColor="@color/background"
        android:background="@drawable/questionlayout"
        />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="120dp"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="@color/white"/>

    <LinearLayout
        android:id="@+id/linearLayoutRadio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <ProgressBar
            android:id="@+id/quizzProgressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:indeterminate="false"
            android:max="22"
            android:minHeight="50dp"
            android:progress="0"
            />

        <TextView
            android:id="@+id/tv_progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="14sp"
            tools:text="0/22"
            />
    </LinearLayout>

    <TextView
        android:id="@+id/score"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_marginBottom="20dp"
        />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        >
        <RadioButton
            android:id="@+id/radioButton1"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/reponselayout"
            android:button="@null"
            android:drawableRight="@android:drawable/btn_radio"
            android:gravity="center"
            android:text="@string/radiobutton1"
            android:textColor="@color/background"
            />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:background="@drawable/reponselayout"
            android:button="@null"
            android:drawableRight="@android:drawable/btn_radio"
            android:gravity="center"
            android:text="@string/radiobutton1"
            android:textColor="@color/background" />

        <RadioButton
            android:id="@+id/radioButton3"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:background="@drawable/reponselayout"
            android:button="@null"
            android:drawableRight="@android:drawable/btn_radio"
            android:gravity="center"
            android:text="@string/radiobutton1"
            android:textColor="@color/background" />

        <RadioButton
            android:id="@+id/radioButton4"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:background="@drawable/reponselayout"
            android:button="@null"
            android:drawableRight="@android:drawable/btn_radio"
            android:gravity="center"
            android:text="@string/radiobutton1"
            android:textColor="@color/background" />
    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnTest"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:background="@drawable/button_drawable"
            android:text="@string/btnTest"
            android:textColor="@color/background"
            android:textSize="14sp" />
    </LinearLayout>

</LinearLayout>